--- a/10 SDN/SDN and nothing else.tex
+++ b/10 SDN/SDN and nothing else.tex
@@ -23,8 +23,19 @@
 
     \begin{figure}[H]
         \centering
-        \includegraphics[height=30pt]{img/fig1.png}
-        \caption{Mininet Topology}
+        \begin{tikzpicture}
+            \draw (0*2,0) node[draw,fill=white] (h1) {h1} +(0,-0.5) node {\scriptsize 10.0.0.10};
+            \draw (2*2,-0.5) node[draw,fill=white] (h2) {h2} +(0,-0.5) node {\scriptsize 10.0.1.1};
+            \draw (4*2,-0.5) node[draw,fill=white] (h3) {h3} +(0,-0.5) node {\scriptsize 10.0.2.1};
+            \draw (6*2,0) node[draw,fill=white] (h4) {h4} +(0,-0.5) node {\scriptsize 10.0.3.10};
+            \draw (1*2,0) node[draw,fill=white,rounded corners] (s1) {Switch 1};
+            \draw (3*2,0) node[draw,fill=white,rounded corners] (s2) {Switch 2};
+            \draw (5*2,0) node[draw,fill=white,rounded corners] (s3) {Switch 3};
+            \draw (h1) -- (s1) -- (s2) -- (s3) -- (h4);
+            \draw (s1) -| (h2);
+            \draw (s2) -| (h3);
+        \end{tikzpicture}
+        \caption{Mininet topology}
         \label{fig:linearRouters}
     \end{figure}
 
@@ -43,9 +54,20 @@
 
     \begin{figure}[H]
         \centering
-        \includegraphics[height=300pt]{img/fig2.png}
-        \caption{Multi Table Scenario}
-        \label{fig:MultiTableScenario}
+        \begin{tikzpicture}
+            \draw (0*3,0) node[draw,fill=white] (h1) {h1} ++(0,-0.5) node {\scriptsize 10.0.0.1};
+            \draw (1*3,-0.5*3) node[draw,fill=white] (h3) {h3} ++(0,-0.5) node {\scriptsize 30.0.0.3} ++(0,-0.3) node {\scriptsize port 80 web server};
+            \draw (2*3,0) node[draw,fill=white] (h2) {h2} ++(0,-0.5) node {\scriptsize 10.0.0.2};
+            \draw (1*3,0) node[draw,fill=white,rounded corners] (s1) {Switch 1};
+            \draw (s1) -- (h1) +(0.7,0.2) node {\scriptsize\textit{eth0}};
+            \draw (s1) +(-0.6*2,0.2) node {\scriptsize\textit{eth1}};
+            \draw (s1) -- (h2) +(-0.7,0.2) node {\scriptsize\textit{eth0}};
+            \draw (s1) +(0.6*2,0.2) node {\scriptsize\textit{eth2}};
+            \draw (s1) -- (h3) +(0.3,0.5) node {\scriptsize\textit{eth0}};
+            \draw (s1) +(0.3,-0.5) node {\scriptsize\textit{eth3}};
+        \end{tikzpicture}
+        \caption{Multitable scenario}
+        \label{fig:MultitableScenario}
     \end{figure}
 
 
