--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -31,25 +31,25 @@
             \begin{flushright}
                 \begin{figure}[H]
                     \centering
-                    \begin{tikzpicture}[font=\sf]
-                        \node[draw] (s) at (0,0){Core Switch};
-                        \node[draw,circle] (h0) at (0,2){h0};
-                        \node[draw,circle] (h1) at ({sqrt(2)},{sqrt(2)}){h1};
-                        \node[draw,circle] (h2) at (2,0){h2};
-                        \node[draw,circle] (h3) at (-{sqrt(2)},{sqrt(2)}){h3};
-                        \node[draw,circle] (h4) at (-2,0){h4};
-                        \node[draw,circle] (h5) at (-{sqrt(2)},-{sqrt(2)}){h5};
-                        \node[draw,circle] (h6) at (0,-2){h6};
-                        \node[draw,circle] (h7) at ({sqrt(2)},-{sqrt(2)}){h7};
+                    \begin{tikzpicture}
+                        \node[draw,align=center,rounded corners] (s) at (0,0){Core\\Switch};
+                        \node[draw] (h0) at (0,2){h0};
+                        \node[draw] (h1) at ({sqrt(2)},{sqrt(2)}){h1};
+                        \node[draw] (h2) at (2,0){h2};
+                        \node[draw] (h3) at (-{sqrt(2)},{sqrt(2)}){h3};
+                        \node[draw] (h4) at (-2,0){h4};
+                        \node[draw] (h5) at (-{sqrt(2)},-{sqrt(2)}){h5};
+                        \node[draw] (h6) at (0,-2){h6};
+                        \node[draw] (h7) at ({sqrt(2)},-{sqrt(2)}){h7};
                     
-                        \draw[thick] (h0) -- (s);
-                        \draw[thick] (h1) -- (s);
-                        \draw[thick] (h2) -- (s);
-                        \draw[thick] (h3) -- (s);
-                        \draw[thick] (h4) -- (s);
-                        \draw[thick] (h5) -- (s);
-                        \draw[thick] (h6) -- (s);
-                        \draw[thick] (h7) -- (s);
+                        \draw (h0) -- (s);
+                        \draw (h1) -- (s);
+                        \draw (h2) -- (s);
+                        \draw (h3) -- (s);
+                        \draw (h4) -- (s);
+                        \draw (h5) -- (s);
+                        \draw (h6) -- (s);
+                        \draw (h7) -- (s);
                     \end{tikzpicture}
                     \caption{\textit{Figure 1.3} A single segment network}        
                 \end{figure}
@@ -204,7 +204,25 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
 
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.7\textwidth]{img/figure2-9.png}
+            \begin{tikzpicture}
+                \draw (0*2,3) node[draw,fill=white] (h0) {h0} -- +(0,-0.75) +(0,+0.5) node {\scriptsize 65.100/16};
+                \draw (1*2,3) node[draw,fill=white] (h1) {h1} -- +(0,-0.75) +(0,+0.5) node {\scriptsize 65.101/16};
+                \draw (2*2,3) node[draw,fill=white] (h2) {h2} -- +(0,-0.75) +(0,+0.5) node {\scriptsize 65.102/16};
+                \draw (3*2,3) node[draw,fill=white] (h3) {h3} -- +(0,-0.75) +(0,+0.5) node {\scriptsize 65.103/16};
+                \draw (0*2,0) node[draw,fill=white] (h4) {h4} -- +(0,+0.75) +(0,-0.5) node {\scriptsize 65.104/16};
+                \draw (1*2,0) node[draw,fill=white] (h5) {h5} -- +(0,+0.75) +(0,-0.5) node {\scriptsize 65.105/16};
+                \draw (2*2,0) node[draw,fill=white] (h6) {h6} -- +(0,+0.75) +(0,-0.5) node {\scriptsize 65.106/16};
+                \draw (3*2,0) node[draw,fill=white] (h7) {h7} -- +(0,+0.75) +(0,-0.5) node {\scriptsize 65.107/16};
+                \draw (0.5*2,1.5) node[draw,rounded corners,fill=white] (r4) {Router 4}
+                    -- +(0,+0.75) +(0,+0.45) node {\scriptsize\textit{ether0}\quad 64.4/24}
+                    -- +(0,-0.75) +(0,-0.45) node {\scriptsize\textit{ether1}\quad 65.4/24}
+                ;
+                \draw[thick] (-1,0.75) -- +({(3+1)*2},0);
+                \draw[thick] (-1,2.25) -- +({(3+1)*2},0);
+                \node at ({-1+(3+0.25)*2},2) {\scriptsize 128.238.64.0 subnet};
+                \node at ({-1+(3+0.25)*2},1) {\scriptsize 128.238.65.0 subnet};
+            \end{tikzpicture}
+        \caption{\textit{Figure 2.9} Network configuration}
     \end{figure}
     
     \begin{report}
@@ -294,9 +312,9 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
     Then, do the following three experiments.
 
     \begin{enumerate}
-        \item Execute \lstinline{telnet} from one of two hosts with the duplicate IP address to a host with unique IP address (e.g.\ \textit{h0} –> \textit{h2} in Group A and \textit{h4} –> \textit{h6} in Group B).
+        \item Execute \lstinline{telnet} from one of two hosts with the duplicate IP address to a host with unique IP address (e.g.\ \textit{h0} $\rightarrow$ \textit{h2} in Group A and \textit{h4} $\rightarrow$ \textit{h6} in Group B).
 
-        Now, from the other host with the duplicate IP address, execute \lstinline{telnet} command to the same host (\textit{h1} –> \textit{h2} or \textit{h5} –> \textit{h6}).
+        Now, from the other host with the duplicate IP address, execute \lstinline{telnet} command to the same host (\textit{h1} $\rightarrow$ \textit{h2} or \textit{h5} $\rightarrow$ \textit{h6}).
 
         Observe what happens and save the \lstinline{tcpdump} output and the ARP tables in all the hosts in your group.
         
@@ -338,17 +356,17 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
         \centering
         \begin{tabular}{ c c c c }
             \hline \hline
-            Group & Host & IP Address & Subnet Mask \\
+            Group & Host & IP Address & \makebox[7.3em][c]{Subnet Mask} \\
             \hline 
-            Group A & h0 & 128.238.66.100 & 255.255.255.240 \\
-                    & h1 & 128.238.66.101 & 255.255.255.0~~~ \\
-                    & h2 & 128.238.66.102 & 255.255.255.0~~~ \\
-                    & h3 & 128.238.66.120 & 255.255.255.240 \\
+            Group A & h0 & 128.238.66.100 & \makebox[7.3em][l]{255.255.255.240} \\
+                    & h1 & 128.238.66.101 & \makebox[7.3em][l]{255.255.255.0} \\
+                    & h2 & 128.238.66.102 & \makebox[7.3em][l]{255.255.255.0} \\
+                    & h3 & 128.238.66.120 & \makebox[7.3em][l]{255.255.255.240} \\
                     \hline
-            Group B & h4 & 128.238.66.104 & 255.255.255.240 \\
-                    & h5 & 128.238.66.105 & 255.255.255.0~~~ \\
-                    & h6 & 128.238.66.106 & 255.255.255.0~~~ \\
-                    & h7 & 128.238.66.121 & 255.255.255.240 \\
+            Group B & h4 & 128.238.66.104 & \makebox[7.3em][l]{255.255.255.240} \\
+                    & h5 & 128.238.66.105 & \makebox[7.3em][l]{255.255.255.0} \\
+                    & h6 & 128.238.66.106 & \makebox[7.3em][l]{255.255.255.0} \\
+                    & h7 & 128.238.66.121 & \makebox[7.3em][l]{255.255.255.240} \\
             \hline \hline
             \end{tabular}
     \end{table}
