--- a/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
+++ b/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
@@ -31,19 +31,21 @@
 
     \begin{figure}[H]
         \centering
-        \begin{tikzpicture}[font=\sf]
-            \node[draw] (h1) at (-2,-2){Host\textsubscript{A}};
-            \node[draw,circle] (hub2) at (-2,0){Hub 2};
-            \node[draw,circle] (router) at (0,0){\shortstack{Router\\as\\Brdige}};
-            \node[draw,circle] (hub1) at (2,0){Hub 1};
-            \node[draw] (h0) at (2,-2){Host\textsubscript{B}};
+        \begin{tikzpicture}
+            \node[draw] (h1) at (-4,0){Host\textsubscript{A}};
+            \node[draw,rounded corners] (hub2) at (-2.5,0){Hub 2};
+            \node[draw,rounded corners,align=center] (router) at (0,0){Router\\as\\Brdige};
+            \node[draw,rounded corners] (hub1) at (2.5,0){Hub 1};
+            \node[draw] (h0) at (4,0){Host\textsubscript{B}};
         
-            \draw[thick] (h0) -- (hub1);
-            \draw[thick] (h1) -- (hub2);
+            \draw (h0) -- (hub1);
+            \draw (h1) -- (hub2);
             \draw[thick] (hub1) -- (router);
             \draw[thick] (hub2) -- (router);
+            \draw (router) +(-1,0.2) node {\scriptsize\textit{eth0}};
+            \draw (router) +(1,0.2) node {\scriptsize\textit{eth1}};
         \end{tikzpicture}
-        \caption{\textit{Figure 3.7.} Using a transparent bridge.}        
+        \caption{\textit{Figure 3.7} Using a transparent bridge}
     \end{figure}
 
 \section{IOS Console}
@@ -130,8 +132,26 @@ Ctrl+Z
 
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.9\textwidth]{img/figure3-4.jpg}
-        \caption{\textit{Figure 3.4.} BPDU message format. The numbers indicate the field length in byte.}
+        \resizebox{0.9\textwidth}{!}{
+        \begin{tikzpicture}
+            \draw (0,0)
+                rectangle ++(2,1) node[pos=0.5] {\Huge 2} ++(-0.5*2,-1) |- +(0.5,-1*6) node[anchor=west] {\huge Protocol Identifier} ++(0.5*2,0)
+                rectangle ++(1,1) node[pos=0.5] {\Huge 1} ++(-0.5*1,-1) |- +(0.5,-1*5) node[anchor=west] {\huge Version} ++(0.5*1,0)
+                rectangle ++(1,1) node[pos=0.5] {\Huge 1} ++(-0.5*1,-1) |- +(0.5,-1*4) node[anchor=west] {\huge Message Type} ++(0.5*1,0)
+                rectangle ++(1,1) node[pos=0.5] {\Huge 1} ++(-0.5*1,-1) |- +(0.5,-1*3) node[anchor=west] {\huge Flags} ++(0.5*1,0)
+                rectangle ++(8,1) node[pos=0.5] {\Huge 8} ++(-0.5*8,-1) |- +(0.5,-1*2) node[anchor=west] {\huge Root ID} ++(0.5*8,0)
+                rectangle ++(4,1) node[pos=0.5] {\Huge 4} ++(-0.5*4,-1) |- +(0,-1*1) node[anchor=north] {\huge Root Path Cost} ++(0.5*4,0)
+                rectangle ++(8,1) node[pos=0.5] {\Huge 8} ++(-0.5*8,-1) |- +(-0,-1*1) node[anchor=north] {\huge Bridge ID} ++(0.5*8,0)
+                rectangle ++(2,1) node[pos=0.5] {\Huge 2} ++(-0.5*2,-1) |- +(-0.5,-1*2) node[anchor=east] {\huge Port ID} ++(0.5*2,0)
+                rectangle ++(2,1) node[pos=0.5] {\Huge 2} ++(-0.5*2,-1) |- +(-0.5,-1*3) node[anchor=east] {\huge Message Age} ++(0.5*2,0)
+                rectangle ++(2,1) node[pos=0.5] {\Huge 2} ++(-0.5*2,-1) |- +(-0.5,-1*4) node[anchor=east] {\huge Maximum Age} ++(0.5*2,0)
+                rectangle ++(2,1) node[pos=0.5] {\Huge 2} ++(-0.5*2,-1) |- +(-0.5,-1*5) node[anchor=east] {\huge Hello Time} ++(0.5*2,0)
+                rectangle ++(2,1) node[pos=0.5] {\Huge 2} ++(-0.5*2,-1) |- +(-0.5,-1*6) node[anchor=east] {\huge Forward Delay} ++(0.5*2,0)
+            ;
+        \end{tikzpicture}
+        }
+        \caption{\textit{Figure 3.4} BPDU message format}
+        {\footnotesize The numbers indicate the field length in byte.}
     \end{figure}
 
 \part{Spanning Tree Exercises}
@@ -144,8 +164,70 @@ Ctrl+Z
     The next exercise shows the process by which a transparent bridge builds its filtering database.
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.9\textwidth]{img/figure3-8.png}
-        \caption{\textit{Figure 3.8.} Bridge experiment network.}
+        \begin{tikzpicture}
+            \node at (0,0) {\scriptsize 128.238.61.0 subnet};
+            \draw (2.5,1) node[draw,fill=white,rounded corners] (br4) {Bridge 4}
+                -- +(0,-1)
+                -- +(0,+1)
+                +(0,0.5) node {\scriptsize\textit{ethernet1}\quad 61.40/24}
+                +(0,-0.5) node {\scriptsize\textit{ethernet0}\quad 61.4/24}
+            ;
+            \draw (3,-1) node[draw,fill=white,rounded corners] (br3) {Bridge 3}
+                -- +(0,-1)
+                -- +(0,+1)
+                +(0,0.5) node {\scriptsize\textit{ethernet1}\quad 61.30/24}
+                +(0,-0.5) node {\scriptsize\textit{ethernet0}\quad 61.3/24}
+            ;
+            \draw (-2.5,1) node[draw,fill=white,rounded corners] (br1) {Bridge 1}
+                -- +(0,-1)
+                -- +(0,+1)
+                +(0,-0.5) node {\scriptsize\textit{ethernet1}\quad 61.10/24}
+                +(0,0.5) node {\scriptsize\textit{ethernet0}\quad 61.1/24}
+            ;
+            \draw (-3,-1) node[draw,fill=white,rounded corners] (br2) {Bridge 2}
+                -- +(0,-1)
+                -- +(0,+1)
+                +(0,-0.5) node {\scriptsize\textit{ethernet1}\quad 61.20/24}
+                +(0,0.5) node {\scriptsize\textit{ethernet0}\quad 61.2/24}
+            ;
+            \draw (4.5,1) node[draw,fill=white] {h7}
+                -- +(0,-1)
+                +(0,0.5) node {\scriptsize 61.107/24}
+            ;
+            \draw (5,-1) node[draw,fill=white] {h6}
+                -- +(0,1)
+                +(0,-0.5) node {\scriptsize 61.106/24}
+            ;
+            \draw (-4.5,1) node[draw,fill=white] {h2}
+                -- +(0,-1)
+                +(0,0.5) node {\scriptsize 61.102/24}
+            ;
+            \draw (-5,-1) node[draw,fill=white] {h3}
+                -- +(0,1)
+                +(0,-0.5) node {\scriptsize 61.103/24}
+            ;
+            \draw (-1.5,3) node[draw,fill=white] {h1}
+                -- +(0,-1)
+                +(0,0.5) node {\scriptsize 61.101/24}
+            ;
+            \draw (1.5,3) node[draw,fill=white] {h0}
+                -- +(0,-1)
+                +(0,0.5) node {\scriptsize 61.100/24}
+            ;
+            \draw (-2,-3) node[draw,fill=white] {h4}
+                -- +(0,1)
+                +(0,-0.5) node {\scriptsize 61.104/24}
+            ;
+            \draw (2,-3) node[draw,fill=white] {h5}
+                -- +(0,1)
+                +(0,-0.5) node {\scriptsize 61.105/24}
+            ;
+            \draw[thick] (2,0) -- +(3.5,0);
+            \draw[thick] (-2,0) -- +(-3.5,0);
+            \draw[thick] (-3,2) -- +(6,0);
+            \draw[thick] (-3.5,-2) -- +(7,0);
+        \end{tikzpicture}
+        \caption{\textit{Figure 3.8} Bridge experiment network}
     \end{figure}
 
 \section{Multi Bridge Path}
