--- a/5 UDP and its applications/UDP and its applications.tex
+++ b/5 UDP and its applications/UDP and its applications.tex
@@ -21,17 +21,14 @@
 
     \begin{figure}[H]
         \centering
-        \begin{tikzpicture}[font=\sf]
-            \node[draw] (h1) at (-2,-2){Host\textsubscript{A}};
-            \node[draw,circle] (hub) at (0,0){Hub};
-            % \node[draw,rounded corners] (router) at (0,0){\shortstack{Router}};
-            % \node[draw,circle] (hub1) at (2,0){Switch 1};
-            \node[draw] (h0) at (2,-2){Host\textsubscript{B}};
+        \begin{tikzpicture}
+            \node[draw] (h1) at (-2,0){Host\textsubscript{A}};
+            \node[draw,rounded corners] (hub) at (0,0){Hub};
+            % \node[draw,rounded corners] (router) at (0,0){Router};
+            % \node[draw,rounded corners] (hub1) at (2,0){Switch 1};
+            \node[draw] (h0) at (2,0){Host\textsubscript{B}};
         
-            \draw[thick] (h0) -- (2,0);
-            \draw[thick] (h1) -- (-2,0);
-            \draw[thick] (2,0) -- (hub);
-            \draw[thick] (-2,0) -- (hub);
+            \draw (h0) -- (hub) -- (h1);
         \end{tikzpicture}
         \caption{\textit{Figure 5.0.} Simple router experiment.}        
         \label{fig:5.0}
@@ -138,15 +135,15 @@ socket -i -u -n10 -w1200 -p5 remote-host 5555
 
     \begin{figure}[H]
         \centering
-        \begin{tikzpicture}[font=\sf]
-            \node[draw] (h1) at (-2,-2){Host\textsubscript{A}};
-            \node[draw,circle] (hub2) at (-2,0){Switch 2};
-            \node[draw,rounded corners] (router) at (0,0){\shortstack{Router}};
-            \node[draw,circle] (hub1) at (2,0){Switch 1};
-            \node[draw] (h0) at (2,-2){Host\textsubscript{B}};
+        \begin{tikzpicture}
+            \node[draw] (h1) at (-4,0){Host\textsubscript{A}};
+            \node[draw,rounded corners] (hub2) at (-2,0){Switch 2};
+            \node[draw,rounded corners] (router) at (0,0){Router};
+            \node[draw,rounded corners] (hub1) at (2,0){Switch 1};
+            \node[draw] (h0) at (4,0){Host\textsubscript{B}};
         
-            \draw[thick] (h0) -- (hub1);
-            \draw[thick] (h1) -- (hub2);
+            \draw (h0) -- (hub1);
+            \draw (h1) -- (hub2);
             \draw[thick] (hub1) -- (router);
             \draw[thick] (hub2) -- (router);
         \end{tikzpicture}
