--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -85,7 +85,7 @@ User-Agent: HTTPTool/1.0
 
     When the server response is received, terminate \lstinline{wireshark}. 
 
-    Examine how LAMP (for php) [CGI (for perl)] works, and identify the data string sent to the server.
+    Examine how LAMP (for php)\footnote{or CGI (for perl)} works, and identify the data string sent to the server.
     Save the HTTP request containing the data string for lab report.
 
     \begin{report}
@@ -100,25 +100,25 @@ User-Agent: HTTPTool/1.0
             \begin{flushright}
                 \begin{figure}[H]
                     \centering
-                    \begin{tikzpicture}[font=\sf]
-                        \node[draw] (s) at (0,0){Core Switch};
-                        \node[draw,circle] (h0) at (0,2){h0};
-                        \node[draw,circle] (h1) at ({sqrt(2)},{sqrt(2)}){h1};
-                        \node[draw,circle] (h2) at (2,0){h2};
-                        \node[draw,circle] (h3) at (-{sqrt(2)},{sqrt(2)}){h3};
-                        \node[draw,circle] (h4) at (-2,0){h4};
-                        \node[draw,circle] (h5) at (-{sqrt(2)},-{sqrt(2)}){h5};
-                        \node[draw,circle] (h6) at (0,-2){h6};
-                        \node[draw,circle] (h7) at ({sqrt(2)},-{sqrt(2)}){h7};
+                    \begin{tikzpicture}
+                        \node[draw,align=center,rounded corners] (s) at (0,0){Core\\Switch};
+                        \node[draw] (h0) at (0,2){h0};
+                        \node[draw] (h1) at ({sqrt(2)},{sqrt(2)}){h1};
+                        \node[draw] (h2) at (2,0){h2};
+                        \node[draw] (h3) at (-{sqrt(2)},{sqrt(2)}){h3};
+                        \node[draw] (h4) at (-2,0){h4};
+                        \node[draw] (h5) at (-{sqrt(2)},-{sqrt(2)}){h5};
+                        \node[draw] (h6) at (0,-2){h6};
+                        \node[draw] (h7) at ({sqrt(2)},-{sqrt(2)}){h7};
                     
-                        \draw[thick] (h0) -- (s);
-                        \draw[thick] (h1) -- (s);
-                        \draw[thick] (h2) -- (s);
-                        \draw[thick] (h3) -- (s);
-                        \draw[thick] (h4) -- (s);
-                        \draw[thick] (h5) -- (s);
-                        \draw[thick] (h6) -- (s);
-                        \draw[thick] (h7) -- (s);
+                        \draw (h0) -- (s);
+                        \draw (h1) -- (s);
+                        \draw (h2) -- (s);
+                        \draw (h3) -- (s);
+                        \draw (h4) -- (s);
+                        \draw (h5) -- (s);
+                        \draw (h6) -- (s);
+                        \draw (h7) -- (s);
                     \end{tikzpicture}
                     \caption{\textit{Figure 1.3} A single segment network}
                     \label{fig:1.3}   
@@ -184,7 +184,7 @@ host h5 {
     Explain how DHCP works.
     
     \item Did \textit{h2} and \textit{h3} successfully obtain a set of new parameters?
-    Compare the ifconfig and netstat output with the parameters carried in the corresponding DHCP messages.
+    Compare the \lstinline{ifconfig} and \lstinline{netstat} output with the parameters carried in the corresponding DHCP messages.
     
     \item Answer the above question for \textit{h4}.
     Explain why \textit{h4} failed.
@@ -293,8 +293,51 @@ date -r file-name
     For the exercises in this section, we use a network setting as shown in Fig. 8.7. The lower subnet is a private network where the hosts are assigned with the Class A addresses with the 10.0.0.0/8 prefix. The upper subnet represents the Internet. The hosts, i.e.\  \textit{h0} and \textit{h1} are assigned with public IP addresses. Router 1 is used as the stub router, which performs address or port translation for the private network.
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.9\textwidth]{img/fig1.png}
-        \caption{\textit{Figure 8.7.} The network configuration for the NAT exercises.}
+        \begin{tikzpicture}
+            \draw (0,0) node[draw,rounded corners,fill=white] (r1) {Router 1}
+                -- +(0,1)
+                -- +(0,-1)
+                +(0,0.5) node[anchor=east] {\scriptsize\textit{eth0}}
+                +(0,0.5) node[anchor=west] {\scriptsize128.283.61.1/24}
+                +(0,-0.5) node[anchor=east] {\scriptsize\textit{eth1}}
+                +(0,-0.5) node[anchor=west] {\scriptsize10.0.0.1/8}
+            ;
+            \draw (-1*2,1.5) node[draw,fill=white] (h0) {h0}
+                -- +(0,-0.5)
+                +(0,0.5) node {\scriptsize 128.238.61.100/24}
+            ;
+            \draw (1*2,1.5) node[draw,fill=white] (h1) {h1}
+                -- +(0,-0.5)
+                +(0,0.5) node {\scriptsize 128.238.61.101/24}
+            ;
+            \draw (-3*2+1,-1.5) node[draw,fill=white] (h2) {h2}
+                -- +(0,0.5)
+                +(0,-0.5) node {\scriptsize 10.0.0.2/8}
+            ;
+            \draw (-2*2+1,-1.5) node[draw,fill=white] (h3) {h3}
+                -- +(0,0.5)
+                +(0,-0.5) node {\scriptsize 10.0.0.3/8}
+            ;
+            \draw (-1*2+1,-1.5) node[draw,fill=white] (h4) {h4}
+                -- +(0,0.5)
+                +(0,-0.5) node {\scriptsize 10.0.0.4/8}
+            ;
+            \draw (1*2-1,-1.5) node[draw,fill=white] (h5) {h5}
+                -- +(0,0.5)
+                +(0,-0.5) node {\scriptsize 10.0.0.5/8}
+            ;
+            \draw (2*2-1,-1.5) node[draw,fill=white] (h6) {h6}
+                -- +(0,0.5)
+                +(0,-0.5) node {\scriptsize 10.0.0.6/8}
+            ;
+            \draw (3*2-1,-1.5) node[draw,fill=white] (h7) {h7}
+                -- +(0,0.5)
+                +(0,-0.5) node {\scriptsize 10.0.0.7/8}
+            ;
+            \draw[thick] (-2-0.5,1) -- +(2*2+1,0) node[pos=0.5,above] {Internet};
+            \draw[thick] (-6+0.5,-1) -- +(6*2-1,0) node[pos=0,above,anchor=south west] {Private Network};
+        \end{tikzpicture}
+        \caption{\textit{Figure 8.7.} The network configuration for the NAT exercises}
         \label{fig:8.7}
     \end{figure}
 
